// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTableGrid renders with count 1`] = `
<div
  className="ax-chart-table__grid-container"
>
  <div
    className="ax-chart-table__grid"
    style={
      Object {
        "left": undefined,
      }
    }
  >
    <div
      className="ax-chart-table__grid-lines"
    >
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "25%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "75%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ChartTableGrid renders with defaultProps 1`] = `
<div
  className="ax-chart-table__grid-container"
>
  <div
    className="ax-chart-table__grid"
    style={
      Object {
        "left": undefined,
      }
    }
  >
    <div
      className="ax-chart-table__grid-lines"
    >
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "10%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "20%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "30%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "40%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "60%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "70%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "80%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "90%",
          }
        }
      />
      <div
        className="ax-chart-table__grid-line"
        style={
          Object {
            "left": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
